# fhswf_web_mining_bundestags_scraper

./: .gitignore  docker-compose.yaml  main.py  pyproject.toml  scrapy.cfg
analyse_politician/: 00_01_schema_verbesserung.ipynb  00_02_gender_enrichment.ipynb  00_1_schema_verbesserung.ipynb  00_2_gender_enrichment.ipynb  01_schema_db.ipynb  02_analyse_data.ipynb  02_gender_enrichment.ipynb  03_analyse_data.ipynb  03_num_and_cat.ipynb  gender_detection_results.json
bundestags_scraper/: items.py  middlewares.py  pipelines.py  settings.py
bundestags_scraper/spiders/: base_spider.py  legislative_period_spider.py  politican_spider.py  politician_contant_spider.py
bundestags_scraper/utils/: h2_count_spider.py  h2_counts.json  sort_counts.py
llm_enrichment/pythonProject1/: analysis.ipynb  content_rag.ipynb  content_rag_openAI.ipynb  data_processing.py  embedding_retrieval.py  filter_education_content.py  get_neo4j_data.ipynb  llm_enrichment_process_final.py  main.py  minister.csv  minister_with_content.json  prepare_neo4j_data.ipynb  push_neo4j_data.ipynb  scraping.py  test_process.py  text_to_dqr.py  utils.py
neo4j_database/: docker-compose.yaml
neo4j_database/conf/: neo4j.conf
notebooks/: neo4j_demo.ipynb
scripts/: neo4j_start.bat  neo4j_start.sh  run_all_scraper.sh  run_legislative_period_scraper.bat  run_legislative_period_scraper.sh  run_politician_content_scraper.bat  run_politician_content_scraper.sh  run_politician_scraper.bat  run_politician_scraper.sh  status_neo4j.bat  status_neo4j.sh  stop_neo4j.bat  stop_neo4j.sh
(+134 files in other folders)
